--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random Song Generator</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <header>
       <h1>Random Song Generator</h1>
     </header>
+    <button id="song-button">See What Song Plays</button>
     <script src="./randomSong.js"></script>
   </body>
 </html>
