--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <h1>Random Song Generator</h1>
     </header>
     <button id="song-button">See What Song Plays</button>
+    <ul id="songs"></ul>
     <script src="./randomSong.js"></script>
   </body>
 </html>
